Update approved_sites.json with new site information
Replaced existing site entry with new site details.

--- a/approved_sites.json
+++ b/approved_sites.json
@@ -1,12 +1,7 @@
 [
     {
-        "site_id": "acme-prod",
-        "site_url": "https://acme.example.com",
+        "site_id": "8484",
+        "site_url": "http://192.168.1.108:8000",
         "status": "active"
-    },
-    {
-        "site_id": "acme-stage",
-        "site_url": "https://staging.acme.example.com",
-        "status": "disabled"
     }
 ]
