--- a/approved_sites.json
+++ b/approved_sites.json
@@ -4,4 +4,9 @@
         "site_url": "http://192.168.1.108:8000",
         "status": "active"
     }
+    {
+        "site_id": "abc",
+        "site_url": "https://abc.app.buildsuite.io",
+        "status": "active"
+    }
 ]
